<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.icyrockton.school_app.fragment.LoginViewModel" />

        <variable
            name="isRemember"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">

        <com.scwang.wave.MultiWaveHeader
            android:layout_width="match_parent"
            app:mwhVelocity="2"
            android:id="@+id/imageView"
            app:mwhStartColor="?colorPrimaryDark"
            app:mwhCloseColor="?colorAccent"
            app:mwhGradientAngle="250"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="64dp"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_userID_Layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="32dp"
            android:layout_marginRight="@dimen/dp_15"
            android:hint="@string/hint_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_userID_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.userID}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_userPassword_Layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="32dp"
            android:layout_marginRight="@dimen/dp_15"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_userID_Layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.userPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_verifyCode_Layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_verification_code"
            app:layout_constraintStart_toStartOf="@+id/login_userPassword_Layout"
            app:layout_constraintTop_toBottomOf="@+id/login_userPassword_Layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_verifyCode_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@={viewModel.verifyCode}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/login_verify_image"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@+id/login_verifyCode_Layout"
            app:layout_constraintTop_toTopOf="@+id/login_verifyCode_Layout" />

        <ProgressBar
            android:id="@+id/login_loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_verify_image"
            app:layout_constraintEnd_toEndOf="@+id/login_verify_image"
            app:layout_constraintStart_toStartOf="@+id/login_verify_image" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/materialCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/dp_15"

            android:checked="@={isRemember}"
            android:text="@string/hint_remember_account"
            app:layout_constraintTop_toBottomOf="@+id/login_verifyCode_Layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"

            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/dp_15"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/materialCheckBox"
            tools:layout_editor_absoluteX="36dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>