<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.main.MainFragment"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_fragment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryDark"
                android:elevation="0dp"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="snap"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/nav_host_fragment_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:navGraph="@navigation/fragment_main_navigation" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/main_bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_fragment_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/main_fragment_drawer_header"
        app:menu="@menu/navigation_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/dark_mode_ic"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:tint="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_settings"
                app:layout_constraintTop_toTopOf="@+id/dark_mode_switch"
                app:srcCompat="@drawable/ic_dark_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/dark_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:text="@string/str_dark_mode"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/dark_mode_ic"
                app:switchPadding="@dimen/dp_10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_settings"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_setting"
                app:icon="@drawable/ic_settings"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>